# ews-meeting-mcp

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  server.json  setup.py
.github/workflows/: publish.yml
docs/: agent-guide.md  demo-recording.md  publishing.md  usage.md
docs/superpowers/plans/: 2026-06-10-ews-product-hardening.md
scripts/: demo_recording.py  live_smoke.py  render_demo_video.py
skills/ews-meeting-mcp/: SKILL.md
src/ews_meeting_agent/: __init__.py  agent_tools.py  audit.py  cli.py  config.py  confirmations.py  ews_client.py  mcp_server.py  meeting.py  policy.py
src/ews_meeting_mcp/: agent_tools.py  cli.py  confirmations.py  datetime_utils.py  errors.py  ews_client.py  mcp_server.py  meeting.py  policy.py  scheduler.py  signature.py
tests/: test_agent_tools.py  test_audit.py  test_config.py  test_confirmations.py  test_datetime_utils.py  test_ews_client.py  test_live_smoke_script.py  test_mcp_server.py  test_meeting.py  test_node_wrapper.mjs  test_policy.py  test_scheduler.py  test_signature.py  test_skill_contract.py
