[project]
name = "ews-meeting-agent"
version = "0.1.8"
requires-python = ">=3.9"
dependencies = [
  "setuptools>=61",
  "exchangelib>=5.0,<6.0",
  "urllib3<2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
